# cs566-project

./: .flake8  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  dataloaders.py  datasets.py  dev-requirements.txt  environment.yml  evaluate_all.py  evaluate_network.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  trainer.py  verify_network.py  versioneer.py  viewer.py
.github/workflows/: autoformat.yml
configs/: main.yaml  mobile_msd_brain.yaml  mobile_msd_heart.yaml  mobile_msd_lung.yaml  mobile_pet.yaml  mobile_pet2.yaml  mobile_voc.yaml  one_coco.yaml  one_msd_brain.yaml  one_msd_heart.yaml  one_msd_lung.yaml  one_pet.yaml  one_pet2.yaml  one_voc.yaml  resnet_coco.yaml  resnet_msd_brain.yaml  resnet_msd_heart.yaml  resnet_msd_lung.yaml  resnet_pet.yaml  resnet_pet2.yaml  resnet_voc.yaml  segone_msd_brain.yaml  segone_msd_heart.yaml  segone_msd_lung.yaml  segone_pet.yaml  segone_pet2.yaml  segone_voc.yaml  test.yaml  unet_msd_brain.yaml  unet_msd_heart.yaml  unet_msd_lung.yaml  unet_msd_spleen.yaml  unet_pet.yaml  unet_pet2.yaml  unet_voc.yaml
data/coco/masks/: COCO_label_mapping.json
data/msd_brain/masks/: BRAIN_label_mapping.json
data/msd_heart/masks/: HEART_label_mapping.json
data/oxford_pet/masks/: PET_label_mapping.json
data/voc/masks/: VOC_label_mapping.json
datasets/: base_dataset.py  coco.py  config.yaml  dataloaders.py  datasets.py  utils.py
networks/: one_encoder.py  resnet_encoder.py  seg_decoder.py
segone/: _version.py  trainer.py
segone/networks/: common_network.py  one_encoder.py  seg_decoder.py  segone_network.py
segone/networks/decoders/: common_decoder_seg.py  common_decoder_seg_4.py  one_decoder_seg.py  segone_decoder_cla.py  segone_decoder_seg.py  segone_decoder_seg2.py
segone/networks/encoders/: mobilenet_encoder.py  one_encoder.py  one_encoder_4.py  resnet_encoder.py  segone_encoder.py  unet_encoder.py
segone/utils/: common_layers.py  eval.py  layers.py  viewer.py
utils/: layers.py
