[build-system]
requires = ["setuptools>=64", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 120
ignore = [
    "E402",
    "E302",
    "E305",
    "E266",
    "E203",
    "W503",
    "W504",
    "E722",
    "E712",
    "E721",
    "E713",
    "E714",
    "E731"
]

[tool.black]
line-length = 120
preview = true
enable-unstable-feature = ["string_processing"]