[metadata]
name = segone
author = Sanghyun Byun, Kayvan Shah, Ayushi Gang and Christopher Apton
description = Official Implementation of SegOne
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/byuns-usc/cs566-project
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Deep Learning :: Computer Vision
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
keywords = segone, segmentation, deep learning, computer vision, pytorch, torch, torchvision, segmentation models, segmentation networks, segmentation architectures, segmentation algorithms, segmentation losses, segmentation metrics, segmentation datasets, segmentation training, segmentation inference, segmentation evaluation, segmentation visualization

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = segone/_version.py
versionfile_build = segone/_version.py
tag_prefix = v
parentdir_prefix = segone-

[build-system]
requires = ["setuptools>=64", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"